<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="376dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tituloEjercicio1"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNuevoLibro"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:text="@string/nuevo_libro"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnListadoLibro"
        android:layout_width="378dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/listado_libros"
        app:layout_constraintStart_toStartOf="@+id/btnNuevoLibro"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevoLibro" />

    <Button
        android:id="@+id/btnVolverLibro"
        android:layout_width="156dp"
        android:layout_height="49dp"
        android:layout_marginTop="232dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="@+id/btnListadoLibro"
        app:layout_constraintTop_toBottomOf="@+id/btnListadoLibro" />
</androidx.constraintlayout.widget.ConstraintLayout>