<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEj1"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:text="@string/btnEj1"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnEj2"
            android:layout_width="374dp"
            android:layout_height="55dp"
            android:layout_marginTop="72dp"
            android:text="@string/btnEj2"
            app:layout_constraintStart_toStartOf="@+id/btnEj1"
            app:layout_constraintTop_toBottomOf="@+id/btnEj1" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="374dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="284dp"
            android:text="@string/btnSalir"
            app:layout_constraintStart_toStartOf="@+id/btnEj2"
            app:layout_constraintTop_toBottomOf="@+id/btnEj2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>