<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio2">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="412dp"
        android:layout_height="59dp"
        android:text="@string/titulo_tiempo"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="129dp"
        android:layout_height="37dp"
        android:text="@string/elige"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="276dp"
        android:layout_height="37dp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnVolverTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="484dp"
        android:text="@string/volver"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment1"
        android:layout_width="265dp"
        android:layout_height="126dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment2"
        android:layout_width="169dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment1" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment3"
        android:layout_width="169dp"
        android:layout_height="139dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/fragment2"
        app:layout_constraintTop_toTopOf="@+id/fragment2" />
</androidx.constraintlayout.widget.ConstraintLayout>