<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleLibro">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:text="@string/titulo_detalle_libro"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTituloDetalle"
        android:layout_width="362dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:text="txtTituloDetalle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/txtAutorDetalle"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtTituloDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloDetalle" />

    <TextView
        android:id="@+id/txtISBNDetalle"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtAutorDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txtAutorDetalle" />

    <TextView
        android:id="@+id/txtEditorialDetalle"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtISBNDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txtISBNDetalle" />

    <TextView
        android:id="@+id/txtPaginasDetalle"
        android:layout_width="132dp"
        android:layout_height="38dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtEditorialDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txtEditorialDetalle" />

    <TextView
        android:id="@+id/txtLeidoDetalle"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/txtPaginasDetalle"
        app:layout_constraintStart_toEndOf="@+id/txtPaginasDetalle" />

    <Button
        android:id="@+id/btnEliminarDetalle"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/eliminar"
        app:layout_constraintStart_toStartOf="@+id/txtPaginasDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txtPaginasDetalle" />

    <Button
        android:id="@+id/btnCancelarDetalle"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="40dp"
        android:text="@string/cancelar"
        app:layout_constraintStart_toStartOf="@+id/txtPaginasDetalle"
        app:layout_constraintTop_toBottomOf="@+id/txtPaginasDetalle" />
</androidx.constraintlayout.widget.ConstraintLayout>